--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,11 +13,14 @@
   </tr>
   <tr>
     <td rowspan="2">
-    <figcaption><img src="img/раптор.jpg"
-                     alt="фото динозавтра"                                                                                                                                             width="300"                                                                                                                                                       height="300"
-                     title="Мем динозавтра ТИ-Рекс">
-                      <p>Мем динозавтра ТИ-Рекс</p>
-    </figcaption></td>
+    <figure>
+      <p><img src="img/раптор.jpg"
+              alt="фото динозавтра"                                                                                                                                               width="300"                                                                                                                                                         height="300"
+              title="Мем динозавтра ТИ-Рекс">
+      </p>
+      <figcaption>Мем динозавтра ТИ-Рекс</figcaption>
+    </figure>
+    </td>
 
     <th colspan="2">Тиранозавр</th>
 
